2002-01-07  Per Bothner  <per@bothner.com>

	* Consumer.java (beginDocument, endDocument):  New methods.
	* FilterConsumer.java (beginDocument, endDocument):  New methods.
	* TreeList.java (END_DOCUMENT):  New code.
	(BEGIN_DOCUMENT):  Now followed by pointer to END_DOCUMENT.
	(various methods):  update as appropriate.

	* FilterConsumer.java (skipping):  New boolean field.
	(Consumer methods):  Do nothing if skipping is true.
	* VoidConsumer.java:  New extends FilterConsumer.
	(Consumer methods):  Remove - use inherited versions.

2001-12-29  Per Bothner  <per@bothner.com>

	* TreeList.java (consumeRange):  Fix indexing bug for BEGIN_GROUP_LONG.

	* TreeList.java (stringValue):  Fix indexing bugs.
	Support POSITION_TRIPLE_FOLLOWS.

2001-12-24  Per Bothner  <per@bothner.com>

	* TreeList.java (get):  Add working implementation.

	* FString.java (getChars):  New method.

2001-11-24  Per Bothner  <per@bothner.com>

	* TreeList.java (writeObject):  Special-case SeqPosition.
	* SeqPosition.java.in (<init>):  New constructor.
	(toString):  Handle null sequence.

	* FString.java (getChars):  New method, writes to StringBuffer.

2001-11-18  Per Bothner  <per@bothner.com>

	* TreeList.java (dump):  Better output for POSITION_TRIPLE_FOLLOWS.

2001-11-12  Per Bothner  <per@bothner.com>

	* TreeList.java (dump):  Print group and attribute type objects.

2001-11-06  Per Bothner  <per@bothner.com>

	* TreeList.java (stringValue):  Make attributes and long groups work.

2001-10-25  Per Bothner  <per@bothner.com>

	* AbstractSequence.java.in (getNextKind, getNextTypeName,
	getNextTypeObject, gotoNext, gotoChildrenStart):  Make public.
	* GapVector.java, LList.java, SimpleVector.java.in,  StableVector.java,
	SubSequence.java, TreeList.java:  Update accordingly.

2001-10-17  Per Bothner  <per@bothner.com>

	* Sequence.java.in (ATTRIBUTE_VALUE):  New constant.
	* TreeList.java (getNextKind, getNext):  Handle BEGIN_ATTRIBUTE_LONG.
	(attrStart):  New field.