@@ -1,3 +1,8 @@
+2002-01-21  Per Bothner  <per@bothner.com>
+
+	* UnescapedData.java:  New class.
+	* Makefile.am (java_sources):  Add UnescapedData.java.
+
 2002-01-07  Per Bothner  <per@bothner.com>
 
 	* Consumer.java (beginDocument, endDocument):  New methods.
